--- a/indexx.html
+++ b/indexx.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Mostrar Texto</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Desafío Técnico</title>
 </head>
 <body>
     <input type="text" id="userInput" placeholder="Escribe algo...">
