--- a/indexx.html
+++ b/indexx.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafío Técnico</title>
+    <link rel="stylesheet" href="estilo.css">
+    
 </head>
 <body>
-    <input type="text" id="userInput" placeholder="Escribe algo...">
+    <h1> Desafío Técnico </h1>
+    <input type="text" id="userInput" placeholder="Inserte Texto...">
     <button onclick="showText()">Mostrar</button>
     <p id="displayText"></p>
 
