--- a/indexx.html
+++ b/indexx.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafío Técnico</title>
     <link rel="stylesheet" href="estilo.css">
-    
+
 </head>
 <body>
+    <div class="margen"> 
     <h1> Desafío Técnico </h1>
+    <img src="Imgenes/logo.png" alt="">
+    
     <input type="text" id="userInput" placeholder="Inserte Texto...">
     <button onclick="showText()">Mostrar</button>
     <p id="displayText"></p>
@@ -19,5 +22,6 @@
             document.getElementById("displayText").textContent = text;
         }
     </script>
+    </div>
 </body>
 </html>
